--- a/.github/workflows/build-MT7628.yml
+++ b/.github/workflows/build-MT7628.yml
@@ -3,15 +3,15 @@ name: Build MT7628
 on: 
   release:
     types: [published]
-#  push:
-#    tags:
-#    - 'v*'
-  #  branches: 
-  #    - master
+  push:
+    tags:
+    - 'v*'
+    branches: 
+      - master
   schedule:
     - cron: 0 17 * * 4
-#  watch:
-#    types: [started]
+  watch:
+    types: [started]
 
 jobs:
   build:
